; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_image_writer.c_image_writer_file_ext.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_image_writer.c_image_writer_file_ext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.image_writer_opts = type { i32 }

@image_writer_opts_defaults = common dso_local global %struct.image_writer_opts zeroinitializer, align 4
@mp_image_writer_formats = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @image_writer_file_ext(%struct.image_writer_opts* %0) #0 {
  %2 = alloca %struct.image_writer_opts*, align 8
  %3 = alloca %struct.image_writer_opts, align 4
  store %struct.image_writer_opts* %0, %struct.image_writer_opts** %2, align 8
  %4 = bitcast %struct.image_writer_opts* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %4, i8* align 4 bitcast (%struct.image_writer_opts* @image_writer_opts_defaults to i8*), i64 4, i1 false)
  %5 = load %struct.image_writer_opts*, %struct.image_writer_opts** %2, align 8
  %6 = icmp ne %struct.image_writer_opts* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store %struct.image_writer_opts* %3, %struct.image_writer_opts** %2, align 8
  br label %8

8:                                                ; preds = %7, %1
  %9 = load i32, i32* @mp_image_writer_formats, align 4
  %10 = load %struct.image_writer_opts*, %struct.image_writer_opts** %2, align 8
  %11 = getelementptr inbounds %struct.image_writer_opts, %struct.image_writer_opts* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i8* @m_opt_choice_str(i32 %9, i32 %12)
  ret i8* %13
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i8* @m_opt_choice_str(i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
